--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
+azure-core==1.30.0
+azure-identity==1.15.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.2
 Flask==2.2.2
-gunicorn
+gunicorn==21.2.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+msal==1.26.0
+msal-extensions==1.1.0
+packaging==23.2
+portalocker==2.8.2
+pycparser==2.21
+PyJWT==2.8.0
+requests==2.31.0
+six==1.16.0
+typing_extensions==4.9.0
+urllib3==2.2.0
 Werkzeug==2.2.2
