--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ msal==1.26.0
 msal-extensions==1.1.0
 packaging==23.2
 portalocker==2.8.2
+psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
+python-dotenv==1.0.1
 requests==2.31.0
 six==1.16.0
 typing_extensions==4.9.0
