Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_elksync.yml
+++ b/.github/workflows/main_elksync.yml
@@ -49,9 +49,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -62,17 +60,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0787D27C622946A0A39A3B3FAFFC7B07 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_81393646EE4C46B68E98536B3930F70C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4F840D6269BD4C819898661B7FDE1E16 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'elksync'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4FA8167EE49B489097E5D981CE7D43E7 }}
